# CMakeLists.txt for Atom-Client
# This project is licensed under the terms of the GPL3 license.
#
# Project Name: Atom-Client
# Description: A collection of clients for Atom. For cross-platform use.
# Author: Max Qian
# License: GPL3

cmake_minimum_required(VERSION 3.20)
project(atom-client C CXX)

add_subdirectory(atom-hydrogen)
