# CMakeLists.txt for Atom-Solver
# This project is licensed under the terms of the GPL3 license.
#
# Project Name: Atom-Solver
# Description: A collection of solvers for Atom
# Author: Max Qian
# License: GPL3

cmake_minimum_required(VERSION 3.20)
project(atom-solver C CXX)

add_subdirectory(atom-astrometry)